<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/txtClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_close"
            android:tint="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="Cambiar contraseña"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textAutoComplete"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_text"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_text"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_text"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/etRepeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_text"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_accent"
            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_title"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>